[gd_scene load_steps=8 format=2]

[ext_resource path="res://maps/Title/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Semi-Coder-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float height = 10.0;
uniform float curve = 0.01;
uniform float speed = 3.0;

void vertex() {
    VERTEX.y += height*sin(VERTEX.x*curve+TIME*speed);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/height = 10.0
shader_param/curve = 0.01
shader_param/speed = 3.0

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 3 )
text = "TCC MAC0499"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Novo" type="Button" parent="CanvasLayer/MainMenu"]
margin_left = 622.0
margin_top = 404.0
margin_right = 1312.0
margin_bottom = 557.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.694118, 0.694118, 0.694118, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Novo"
flat = true

[node name="Continuar" type="Button" parent="CanvasLayer/MainMenu"]
margin_left = 622.0
margin_top = 587.0
margin_right = 1312.0
margin_bottom = 740.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.235294, 0.235294, 0.235294, 1 )
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.992157, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.67451, 0.682353, 0.0352941, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Continuar"
flat = true

[node name="Opções" type="Button" parent="CanvasLayer/MainMenu"]
margin_left = 622.0
margin_top = 770.0
margin_right = 1312.0
margin_bottom = 923.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.694118, 0.694118, 0.694118, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Opções"
flat = true

[node name="Opt" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Novo" type="Label" parent="CanvasLayer/Opt"]
margin_left = 281.0
margin_top = 404.0
margin_right = 1712.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Escolha seu tipo de controle:"
align = 1
valign = 1

[node name="Direto" type="Button" parent="CanvasLayer/Opt"]
margin_left = 300.0
margin_top = 587.0
margin_right = 990.0
margin_bottom = 740.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.235294, 0.235294, 0.235294, 1 )
custom_colors/font_color = Color( 0.0588235, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0431373, 0.764706, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Direto"
flat = true

[node name="Gamepad" type="Button" parent="CanvasLayer/Opt"]
margin_left = 944.0
margin_top = 587.0
margin_right = 1634.0
margin_bottom = 740.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.235294, 0.235294, 0.235294, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.694118, 0.694118, 0.694118, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Gamepad"
flat = true

[node name="Retornar" type="Button" parent="CanvasLayer/Opt"]
margin_left = 622.0
margin_top = 770.0
margin_right = 1312.0
margin_bottom = 923.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.694118, 0.694118, 0.694118, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Retornar"
flat = true

[node name="BlackFade" type="ColorRect" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BlackFade"]
anims/fade_out = SubResource( 5 )

[connection signal="pressed" from="CanvasLayer/MainMenu/Novo" to="." method="_on_Novo_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Opções" to="." method="_on_Opes_pressed"]
[connection signal="pressed" from="CanvasLayer/Opt/Direto" to="." method="_on_Direto_pressed"]
[connection signal="pressed" from="CanvasLayer/Opt/Gamepad" to="." method="_on_Gamepad_pressed"]
[connection signal="pressed" from="CanvasLayer/Opt/Retornar" to="." method="_on_Retornar_pressed"]
